[package]
name = "base-learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
futures = "0.3"
regex = "1.8.3"
anyhow = "1.0.71"
thiserror = "1.0.40"
itertools = "0.10.4"
chrono = "0.4"


[dependencies.async-std] # for async-http-server
version = "1.6"
features = ["attributes"]