[package]
name = "lib-learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "4.1.8"
anyhow = "1.0.69"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.7"
arrow = "37.0.0"
opcua = { version = "0.11", features = ["client"] }
dashmap = "5.4.0"