[package]
name = "middleware-learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
taos ={ path = "/Users/zmlgirl/Documents/codes/github/taosdata/taos-connector-rust/taos"}
chrono = "0.4.23"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"